# C_Hub

./: 7.c  README.md  cccccccc.sln  函数对象.sln  水仙花数判断.c
12_7/: 12_7.sln  12_7.vcxproj  12_7.vcxproj.filters  5.c
12_7/x64/Debug/: 12_7.exe.recipe  (+1 more)
C/Write_a_Shell_in_C/: main.c
C/测试/: FileName.c  FileName.cpp  测试.vcxproj
C/顿开图书管理系统C版/: Book.c  BookManage.c  BookManage.h  Circulate.c  Circulate.h  Configure.h  List.c  Menu.c  Reader.c  Reader.h  ReaderManager.c  ReaderManager.h  User.c  User.h  UserManager.c  UserManager.h  源.c  顿开图书管理系统C版.vcxproj  顿开图书管理系统C版.vcxproj.filters
Python/P11/: main.py
Qt/10_QtGame/: CMakeLists.txt  Entity.h  PlayerPlane.cpp  PlayerPlane.h  QGame.cpp  Sprite.cpp  Sprite.h  main.cpp
Qt/11_layout/: CMakeLists.txt  main.cpp
Qt/12_MainWindow/: CMakeLists.txt
Qt/14_LoginRegister/: CMakeLists.txt
Qt/16_WindeployQt_GUI/: CMakeLists.txt  QtEnvSearch.cpp  WindeployQtUI.cpp  WindeployQtUI.h  main.cpp
Qt/17_Wallpaper/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Resource.qrc  SettingsDlg.ui  main.cpp
Qt/23_WebSocket_FileTransfer/: CMakeLists.txt  RemoteFileDlg.cpp  RemoteFileDlg.h  RemoteFileDlg.ui  main.cpp
Qt/CMakeProject1/: CMakeLists.txt  main.cpp
Qt/Qt1/: Qt1.pro  main.cpp
Qt/Qt2/: Qt2.pro
Qt/Qt3/: CMakeLists.txt
Qt/_QtCMakeProjectTemplate/: CMakeLists.txt
Qt/build-Qt1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
Qt/build-Qt3-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
c++/: c++.sln
c++/c++/: FileName.cpp  c++.vcxproj  source.json
pingpang(demo)/: game.h  pingpang(demo).sln  pingpang(demo).vcxproj  pingpang(demo).vcxproj.filters  源.cpp
wuming/扫雷项目demo/: game.c  扫雷项目demo.c  扫雷项目demo.sln  扫雷项目demo.vcxproj  扫雷项目demo.vcxproj.filters
五子棋/: 五子棋.sln
五子棋/五子棋/: AI.h  Chess.cpp  Chess.h  ChessGame.h  五子棋.vcxproj  五子棋.vcxproj.filters  源.cpp
五子棋01/: 五子棋01.sln
五子棋01/五子棋01/: AI.h  Chess.cpp  Chess.h  ChessGame.cpp  ChessGame.h  Man.cpp  Man.h  五子棋01.vcxproj  五子棋01.vcxproj.filters  源.cpp
学校的数据结构与算法/复习哈夫曼压缩解压缩编码/: Res.h  压缩.c  复习哈夫曼压缩解压缩编码.sln  复习哈夫曼压缩解压缩编码.vcxproj
学校的数据结构与算法/学生管理系统-顺序表的增删改查/: stuInfo.txt  源.c
数据结构与算法-C语言解释版/11-A星寻路算法/: 11-A星寻路算法.vcxproj
数据结构与算法-C语言解释版/AAATest/: 源.cpp
评委打分/: 评委打分.sln
评委打分/评委打分/: FileName.cpp  评委打分.vcxproj
(+104 files in other folders)
